changed the image for day mode to fix contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -54,6 +54,7 @@ header img {
 	font-size: 3rem;
 	cursor: pointer;
 	font-size: 2rem;
+    background-color: rgba(255,255,255,0.3);
 }
 
 nav {
